--- a/admin/index.html
+++ b/admin/index.html
@@ -1,9 +1,20 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <title>Admin</title>
-  <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
-</head>
-<body></body>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <!-- Обязательный контейнер -->
+    <div id="nc-root"></div>
+
+    <!-- Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
+
+    <!-- ЯВНЫЙ СТАРТ -->
+    <script>
+      window.CMS.init();
+    </script>
+  </body>
 </html>
